--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
-          channel: 'dev'
+          flutter-version: '3.13.0'
+          channel: 'stable'
       - name: 'Run flutter pub get'
         run: flutter pub get
       - name: Enable flutter web
