--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: amadeus
-description: A new Flutter project.
+description: An Azure-Openai compatible client for various platforms. .
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.1.0+1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.0
   logger: ^2.0.1
   http: ^1.1.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
